added noise model

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ __pycache__/agent.cpython-38.pyc
 __pycache__/memoryBuffer.cpython-310.pyc
 __pycache__/networks.cpython-310.pyc
 __pycache__/pendulumCart.cpython-38.pyc
+__pycache__/OUActionNoise.cpython-310.pyc
